--- a/src/Bloggy.Client.Web/packages.config
+++ b/src/Bloggy.Client.Web/packages.config
@@ -1,17 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="AspNet.Identity.RavenDB" version="1.0.0-pre05" targetFramework="net45" />
   <package id="Autofac" version="3.1.3" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.0.0-rc1" targetFramework="net45" />
   <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
-  <package id="FontAwesome" version="3.2.1" targetFramework="net45" />
+  <package id="BundleTransformer.Core" version="1.8.17" targetFramework="net45" />
+  <package id="BundleTransformer.Less" version="1.8.14" targetFramework="net45" />
+  <package id="dotless" version="1.4.0.0" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Core" version="1.0.0" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="1.0.0" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.V8" version="1.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.8.1" targetFramework="net45" />
+  <package id="Less.js" version="1.5.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
@@ -27,13 +34,14 @@
   <package id="Microsoft.Owin.Security.Cookies" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="MsieJavaScriptEngine" version="1.2.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="NLog" version="2.1.0" targetFramework="net45" />
   <package id="NLog.Config" version="2.1.0" targetFramework="net45" />
   <package id="NLog.Schema" version="2.1.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RavenDB.Client" version="2.5.2700" targetFramework="net45" />
   <package id="TinyMCE" version="4.0.8" targetFramework="net45" />
-  <package id="Twitter.Bootstrap.Less" version="2.3.2.1" targetFramework="net45" />
-  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.Less" version="3.0.3" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
