--- a/src/Bloggy.Client.Web/Web.config
+++ b/src/Bloggy.Client.Web/Web.config
@@ -7,14 +7,7 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
-    <sectionGroup name="bundleTransformer">
-      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
-      <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
-    </sectionGroup>
-    
-  <sectionGroup name="jsEngineSwitcher">
-			<section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
-		</sectionGroup></configSections>
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -32,9 +25,11 @@
     <add key="Bloggy:Akismet:Enabled" value="false" />
     <add key="Bloggy:Akismet:ApiKey" value="whatever" />
     <add key="Bloggy:Akismet:Blog" value="" />
+
+    <add key="Bloggy:Theme:Name" value="cosmo" />
   </appSettings>
   <system.web>
-    <trace enabled="true"/>
+    <trace enabled="true" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <sessionState mode="Off" />
@@ -67,15 +62,8 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition="" />
-      <add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" resourceType="File" preCondition="" />
     </handlers>
-  <security>
-			<requestFiltering>
-				<hiddenSegments>
-					<add segment="ClearScript.V8" />
-				</hiddenSegments>
-			</requestFiltering>
-		</security></system.webServer>
+  </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -111,36 +99,4 @@
     </assemblyBinding>
   </runtime>
   <dotless minifyCss="false" cache="true" web="false" />
-  <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
-    <core>
-      <css>
-        <minifiers>
-          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-        </minifiers>
-        <translators>
-          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-          <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" />
-        </translators>
-      </css>
-      <js>
-        <minifiers>
-          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-        </minifiers>
-        <translators>
-          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-        </translators>
-      </js>
-    </core>
-    <less>
-      <jsEngine name="V8JsEngine" />
-    </less>
-  </bundleTransformer>
-  <jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd">
-    <core>
-      <engines>
-        <add name="MsieJsEngine" type="JavaScriptEngineSwitcher.Msie.MsieJsEngine, JavaScriptEngineSwitcher.Msie" />
-        <add name="V8JsEngine" type="JavaScriptEngineSwitcher.V8.V8JsEngine, JavaScriptEngineSwitcher.V8" />
-      </engines>
-    </core>
-  </jsEngineSwitcher>
 </configuration>
