--- a/src/Bloggy.Domain/Bloggy.Domain.csproj
+++ b/src/Bloggy.Domain/Bloggy.Domain.csproj
@@ -73,8 +73,11 @@
     <Compile Include="Entities\IComment.cs" />
     <Compile Include="Entities\ITrackable.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="IEntity.cs" />
     <Compile Include="Indexes\BlogPostsWithCommentsCountTransformer.cs" />
     <Compile Include="Indexes\Tags_Count.cs" />
+    <Compile Include="IPaginatedList.cs" />
+    <Compile Include="PaginatedList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
   </ItemGroup>
