--- a/src/Bloggy.Client.Web/packages.config
+++ b/src/Bloggy.Client.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="Autofac.Mvc5" version="3.0.0-rc1" targetFramework="net45" />
   <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
   <package id="dotless" version="1.4.0.0" targetFramework="net45" />
+  <package id="FontAwesome" version="4.0.3.1" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.8.1" targetFramework="net45" />
   <package id="Less.js" version="1.5.1" targetFramework="net45" />
