--- a/src/Bloggy.Domain/Bloggy.Domain.csproj
+++ b/src/Bloggy.Domain/Bloggy.Domain.csproj
@@ -76,6 +76,7 @@
     <Compile Include="IEntity.cs" />
     <Compile Include="Indexes\BlogPostArchiveIndex.cs" />
     <Compile Include="Indexes\BlogPostBySlugPath.cs" />
+    <Compile Include="Indexes\BlogPost_ByYearAndMonth.cs" />
     <Compile Include="Indexes\MaterializedBlogPostIndex.cs" />
     <Compile Include="Indexes\Tags_Count.cs" />
     <Compile Include="IPaginatedList.cs" />
