fixed a few config bugs, added google analytics, added about and contact pages, getting ready for prod

--- a/src/Bloggy.Client.Web/Bloggy.Client.Web.csproj
+++ b/src/Bloggy.Client.Web/Bloggy.Client.Web.csproj
@@ -587,6 +587,8 @@
     <Content Include="Views\Tags\List.cshtml" />
     <Content Include="Views\Archive\List.cshtml" />
     <Content Include="Views\Archive\Index.cshtml" />
+    <Content Include="Views\Default\About.cshtml" />
+    <Content Include="Views\Default\Contact.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
