--- a/src/Bloggy.Client.Web/Web.config
+++ b/src/Bloggy.Client.Web/Web.config
@@ -16,7 +16,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <add key="Bloggy:RavenDb:Url" value="http://localhost:8080/" />
-    <add key="Bloggy:RavenDb:DefaultDatabase" value="Blog" />
+    <add key="Bloggy:RavenDb:DefaultDatabase" value="Bloggy" />
 
     <add key="Bloggy:Recaptcha:Active" value="false" />
     <add key="Bloggy:Recaptcha:PublicKey" value="" />
@@ -27,6 +27,8 @@
     <add key="Bloggy:Akismet:Blog" value="" />
 
     <add key="Bloggy:Theme:Name" value="cosmo" />
+
+    <add key="Google:Analytics:TrackingId" value="" />
   </appSettings>
   <system.web>
     <trace enabled="true" />
