--- a/utils/Bloggy.Client.Web.Migrator/App.config
+++ b/utils/Bloggy.Client.Web.Migrator/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="Bloggy:RavenDb:Url" value="http://localhost:8080/" />
-    <add key="Bloggy:RavenDb:DefaultDatabase" value="Blog" />
+    <add key="Bloggy:RavenDb:DefaultDatabase" value="Bloggy" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -12,14 +12,6 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.8.17.0" newVersion="1.8.17.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="JavaScriptEngineSwitcher.Core" publicKeyToken="c608b2a8cc9e4472" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
