--- a/src/Bloggy.Client.Web/Web.config
+++ b/src/Bloggy.Client.Web/Web.config
@@ -15,6 +15,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
+    <add key="Bloggy:Title" value="Tugberk Ugurlu's Blog" />
+    
     <add key="Bloggy:RavenDb:Url" value="http://localhost:8080/" />
     <add key="Bloggy:RavenDb:DefaultDatabase" value="Bloggy" />
 
