enabled image upload to blob storage

--- a/src/Bloggy.Client.Web/Web.config
+++ b/src/Bloggy.Client.Web/Web.config
@@ -30,6 +30,8 @@
     <add key="Bloggy:Akismet:ApiKey" value="whatever" />
     <add key="Bloggy:Akismet:Blog" value="" />
 
+    <add key="Bloggy:AzureBlobStorageConnectionString" value="UseDevelopmentStorage=true;" />
+    
     <add key="Bloggy:Theme:Name" value="cosmo" />
 
     <add key="Google:Analytics:TrackingId" value="" />
