--- a/src/Bloggy.Client.Web/packages.config
+++ b/src/Bloggy.Client.Web/packages.config
@@ -24,6 +24,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
@@ -31,13 +33,16 @@
   <package id="Microsoft.Owin.Security.Cookies" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="NLog" version="2.1.0" targetFramework="net45" />
   <package id="NLog.Config" version="2.1.0" targetFramework="net45" />
   <package id="NLog.Schema" version="2.1.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RavenDB.Client" version="2.5.2700" targetFramework="net45" />
+  <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="TinyMCE" version="4.0.8" targetFramework="net45" />
   <package id="Twitter.Bootstrap.Less" version="3.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="2.1.0.4" targetFramework="net45" />
 </packages>
