--- a/src/Bloggy.Client.Web/packages.config
+++ b/src/Bloggy.Client.Web/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Tracing" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebHelpers" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
